# strategos

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/adapters/: claude.rs  fake.rs  mod.rs  ollama.rs  opencode.rs  traits.rs
src/budget/: forecast.rs  governor.rs  mod.rs  thresholds.rs
src/cli/: mod.rs
src/config/: mod.rs
src/errors/: mod.rs
src/models/: event.rs  mod.rs  policy.rs  project.rs  task.rs  usage.rs
src/orchestrator/: service.rs
src/routing/: engine.rs  mod.rs  policy.rs
src/storage/: schema.rs  sqlite.rs
src/tui/: app.rs  domain.rs  event.rs  feed.rs  mod.rs  state.rs  terminal.rs  update.rs
src/tui/views/: budget_view.rs  chats.rs  events_view.rs  mod.rs  projects_view.rs  queue.rs
src/tui/widgets/: composer.rs  feed.rs  footer.rs  header.rs  help.rs  mod.rs  sidebar.rs
tests/: adapter_tests.rs  budget_tests.rs  integration_smoke.rs  orchestrator_tests.rs  routing_tests.rs  tui_tests.rs
